# spoticord-cdm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
cpp/: adapter.cpp  adapter.h  wrapper.cpp  wrapper.h
src/: error.rs  lib.rs  loading.rs  promises.rs
src/ffi/: bridge.rs  cdm.rs  mod.rs
