[package]
name = "spoticord-cdm"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.9.0"
once_cell = "1.21.3"
oneshot = { version = "0.2.1", features = ["std"] }
thiserror = "2.0.18"

[build-dependencies]
cc = "1.2.56"

[dev-dependencies]
base64 = "0.22.1"
mp4-atom = "0.10.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
